delete auth and fix fs storage file not found bugs